# cookiecutter-pypackage

./: Makefile  README.md  cookiecutter.json  requirements-dev.txt  setup.py
tests/: test_bake_project.py
{{cookiecutter.project_repo}}/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_repo}}/.github/workflows/: package.on-dispatch.yml  pythonpackage.yml
